# amr_core

./: LICENSE  README.md
amr_bag_recorder/: CMakeLists.txt  package.xml
amr_bag_recorder/launch/: amr_bag_recorder.launch
amr_bringup/: CMakeLists.txt  package.xml
amr_bringup/launch/: amr_minimal_bringup.launch  amr_teleop_bringup.launch  minimal_bringup.launch
amr_controller/: CMakeLists.txt  package.xml
amr_controller/config/: controller_params.yaml
amr_controller/launch/: amr_controller.launch
amr_controller/msg/: Command2D.msg
amr_controller/scripts/: amr_vehicle_controller_node.py  amr_vehicle_controller_node_SAFE.py
amr_data_processor/: CMakeLists.txt  package.xml
amr_data_processor/config/: data_storage.yaml
amr_data_processor/launch/: amr_data_storage.launch
amr_data_processor/scripts/: amr_data_storage_node.py
amr_master/amr_nn_controller_service/: CMakeLists.txt  package.xml
amr_master/amr_nn_controller_service/config/: models.yaml  params.yaml
amr_master/amr_nn_controller_service/launch/: amr_nn_controller_service.launch
amr_master/amr_nn_controller_service/scripts/: amr_nn_controller_service.py  models.py  net_transforms.py  nn_controller_service.py  transforms.py  utils.py
amr_master/amr_nn_controller_service/scripts/config/: default.py
amr_master/amr_nn_controller_service/scripts/model/meta_arch/: pilot_net.py
amr_master/amr_nn_controller_service/srv/: PredictCommand.srv
amr_master/amr_object_detection/: CMakeLists.txt  README.md  package.xml
amr_master/amr_object_detection/config/model/: yolo2.yaml
amr_master/amr_object_detection/include/amr_object_detection/: object_detection.h
amr_master/amr_object_detection/launch/: amr_object_detection.launch
amr_master/amr_object_detection/scripts/: amr_object_detection_service.py  cfg.py  darknet.py  region_loss.py  utils.py
amr_master/amr_object_detection/src/: object_detection.cpp  object_detection_node.cpp
amr_master/amr_object_detection/src/test/: test_object_detection.cpp
amr_master/amr_object_detection/srv/: Yolo2.srv
amr_master/amr_object_detection/test/: test_object_detection_launch.test
amr_master/amr_service_hub/: CMakeLists.txt  package.xml
amr_master/amr_service_hub/launch/: amr_service_hub.launch
amr_master/amr_service_hub/scripts/: amr_nn_controller_service.py
amr_master/amr_tf_controller_service/: CMakeLists.txt  package.xml
amr_master/amr_tf_controller_service/config/: models.yaml
amr_master/amr_tf_controller_service/msg/: Command2D.msg
amr_master/amr_tf_controller_service/scripts/: controller.py  tf_controller_service.py
amr_master/amr_tf_controller_service/srv/: PredictCommand.srv
amr_models/: README.md
amr_models/model_nn_controller_service/: README.md  data_loader.py  model.py  train.py  transforms.py  utils.py
amr_nn_controller/: package.xml
amr_nn_controller/launch/: amr_nn_controller.launch
amr_nn_controller/scripts/: amr_nn_controller_node.py
amr_teleop/: package.xml
amr_teleop/config/: joystick_params.yaml
amr_teleop/launch/: amr_teleop_ps3.launch
amr_teleop/scripts/: amr_teleop_ps3.py  amr_teleop_ps3_node.py
amr_worker/: video_stream_opencv
amr_worker/amr_bag_recorder/: CMakeLists.txt  bags.bag  package.xml
amr_worker/amr_bag_recorder/launch/: amr_bag_recorder.launch
amr_worker/amr_bringup/: CMakeLists.txt
amr_worker/amr_bringup/config/: params.yaml
amr_worker/amr_bringup/launch/: .teleop_bringup.launch.swp  amr_minimal_bringup.launch  amr_nn_bringup.launch  amr_teleop_bringup.launch
amr_worker/amr_controller/: CMakeLists.txt
amr_worker/amr_controller/config/: controller_params.yaml
amr_worker/amr_controller/launch/: amr_controller.launch
amr_worker/amr_controller/scripts/: sample.py
amr_worker/amr_data_processor/: CMakeLists.txt  package.xml
amr_worker/amr_data_processor/config/: data_storage.yaml
amr_worker/amr_data_processor/scripts/: amr_data_storage_node.py
amr_worker/amr_nn_controller/: CMakeLists.txt  package.xml
amr_worker/amr_nn_controller/scripts/: amr_nn_controller_node.py
amr_worker/amr_nn_controller/srv/: PredictCommand.srv
amr_worker/amr_teleop/: CMakeLists.txt  package.xml
amr_worker/amr_teleop/launch/: amr_teleop_ps3.launch
amr_worker/amr_teleop/scripts/: amr_teleop_ps3_node.py
amr_worker/rtsp_streamer/: CMakeLists.txt  package.xml
amr_worker/rtsp_streamer/config/: user.yaml
amr_worker/rtsp_streamer/include/rtsp_streamer/: streamer.h
amr_worker/rtsp_streamer/launch/: rtsp_streamer.launch
amr_worker/rtsp_streamer/src/: rtsp_streamer_node.cpp  streamer.cpp
model_sandbox/: README.md
model_sandbox/model_nn_controller_service/: data_loader.py  models.py  requirements.txt  train.py
