<?xml version="1.0"?>
<package>
  <name>amr_bringup</name>
  <version>0.0.0</version>
  <description>The amr_bringup package</description>
  <maintainer email="tasuku@gmail.com">tasuku</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
