<?xml version="1.0"?>
<package format="2"	>
  <name>amr_controller</name>
  <version>0.0.0</version>
  <description>The amr_controller package</description>
  <maintainer email="tasuku@gmail.com">tasuku</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>

  <export>
  </export>
</package>
