<?xml version="1.0"?>
<package format="2">
  <name>amr_nn_controller</name>
  <version>0.0.0</version>
  <description>The amr_nn_controller package</description>
  <maintainer email="tasuku@gmail.com">tasuku</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>amr_controller</depend>
  <depend>amr_service_hub</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
