<?xml version="1.0"?>
<package format="2">
  <name>amr_object_detection</name>
  <version>0.0.0</version>
  <description>The object_detection package</description>
  <maintainer email="tasuku@gmail.com">surfertas</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <test_depend>rostest</test_depend>
  <export>
  </export>
</package>
