<?xml version="1.0"?>
<package format="2">
  <name>rtsp_streamer</name>
  <version>0.0.0</version>
  <description>The rtsp_streamer package</description>
  <maintainer email="tasuku@gmail.com">tasuku</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <export>
  </export>
</package>
